<resources>
    <string name="app_name">T3a3-Componentes</string>
    <string name="cupcakes">Cupcakes</string>
    <string name="autor">Autor</string>
    <string name="descricpcion">Descricpcion</string>
    <string name="DescriptionText">una receta ideal para iniciarse con los cupcakes, con la que preparar unos ricos cupcakes de vainilla con cobertura de buttercream, cobertura de la que os proponemos tres versiones.</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="ingredientesText">- 165 gramos de harina de repostería\n-165 gramos de mantequilla sin sal\n- 165 gramos de azúcar\n- 15 ml de esencia de vainilla\n- 50 ml de leche\n- 5gramos de levadura\n- 3 huevos medianos</string>
    <string name="receta">Receta</string>
</resources>