<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/grey"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33"
        >
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        >
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66"
        >
    </androidx.constraintlayout.widget.Guideline>

    <ImageView
        android:id="@+id/picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/cupcake"
        app:layout_constraintStart_toStartOf="@+id/horizontalGuide"
        app:layout_constraintEnd_toEndOf="@+id/horizontalGuide"
        android:scaleType="centerCrop"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintHeight_percent="0.33"
        app:layout_constraintTop_toTopOf="parent"
        >

    </ImageView>
    <TextView
        android:id="@+id/titol"
        android:text="@string/cupcakes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="48dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalGuide"
        app:layout_constraintStart_toStartOf="parent"
        >

    </TextView>
    <TextView
        android:id="@+id/autor"
        android:text="@string/autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalGuide"
        app:layout_constraintStart_toStartOf="parent"
        >

    </TextView>

    <TextView
        android:id="@+id/description"
        android:text="@string/descricpcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toBottomOf="@+id/horizontalGuide"
        app:layout_constraintStart_toStartOf="@+id/autor"

        >

    </TextView>
    <TextView
        android:id="@+id/descriptionText"
        android:text="@string/DescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintEnd_toEndOf="@id/verticalGuide"
        >

    </TextView>

    <TextView
        android:id="@+id/ingredientes"
        android:text="@string/ingredientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toBottomOf="@+id/horizontalGuide"
        app:layout_constraintStart_toStartOf="@+id/verticalGuide"

        >

    </TextView>
    <TextView
        android:id="@+id/ingredientesText"
        android:text="@string/ingredientesText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        app:layout_constraintTop_toBottomOf="@+id/ingredientes"
        app:layout_constraintStart_toStartOf="@+id/ingredientes"
        app:layout_constraintEnd_toEndOf="parent"
        >

    </TextView>

    <TextView
        android:id="@+id/receta"
        android:text="@string/receta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toBottomOf="@+id/bottomGuide"
        app:layout_constraintStart_toStartOf="@+id/verticalGuide"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuide"
        />
    <TextView
        android:id="@+id/recetaText"
        android:text="Una vez que tenemos el horno en marcha, y todos nuestros ingredientes medidos y pesados, vamos a comenzar a preparar la base de nuestros cupcakes. Nosotros empleamos una amasadora automática, pero se puede emplear también unas varillas manuales o un robot de cocina, lo que os resulte más cómodo dentro de lo que dispongáis."
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        app:layout_constraintTop_toBottomOf="@+id/receta"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintEnd_toEndOf="@id/ingredientesText"
        >

    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>